// Vitest Snapshot v1

exports[`Tag or CheckTag > :Tag:props > :checked 1`] = `
<span
  checked="true"
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :closable 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--close t-size-m"
>
  <!---->
  <!---->
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :disabled 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--disabled t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :maxWidth 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-size-m"
  style="max-width: 100px;"
>
  <!---->
  <span
    class="t-tag--text"
    style="max-width: 100px;"
  >
    <!---->
  </span>
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:mark 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m t-tag--mark"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:round 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m t-tag--round"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:square 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :size:large 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-l"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :size:medium 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :size:small 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :theme: 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:default 2`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 2`] = `
<span
  class="t-tag t-tag--default t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:default 2`] = `
<span
  class="t-tag t-tag--default t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light-outline;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--light t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;

exports[`Tag or CheckTag > @event: Tag > Event passthrough: close 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--close t-size-m"
>
  <!---->
  <!---->
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag > CheckTag:props > :checked 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-size-m t-tag--checked"
>
  <!---->
</span>
`;

exports[`Tag or CheckTag > CheckTag:props > :disabled 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-size-m t-tag--disabled"
>
  <!---->
</span>
`;

exports[`Tag or CheckTag > Tag:slot > <icon> 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-m"
>
  <!---->
  <!---->
  <!---->
</span>
`;
